@@ -104,6 +104,10 @@ pdf(file = ifelse(onefile, "Rplots.pdf", "Rplot\%03d.pdf"),
   transparent output to be produced.  Specifying a lower version
   number may be useful if you want to produce PDF output that can be
   viewed on older PDF viewers.
+
+  Line widths as controlled by \code{par(lwd=)} are in multiples of
+  1/96inch.  Multiples less than 1 are allowed.  \code{pch="."}
+  corresponds to a square of side 1/72 inch.
 }
 \note{
   Acrobat Reader does not use the fonts specified but rather emulates
