@@ -43,6 +43,9 @@ points(x, \dots)
     
     If \code{pch} is an integer or character \code{NA} or an empty
     character string, the point is omitted from the plot.
+
+    Value \code{pch="."} is handled specially as a rectangle with each
+    side the larger of one pixel and 0.01 inch.
   }
   \item{col}{color code or name, see \code{\link{par}}.}
   \item{bg}{background (\dQuote{fill}) color for open plot symbols}
